test/spec_vectors/i32/fail/module_9.wat
(module (func $type-unary-operand-empty-in-return (return (i32.eqz)) (drop)))